@@ -1,3 +1,9 @@
+2010-08-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Remove dead code from versioning test.
+	* tests/versioning.at (versioning): No need to build unused
+	prog3.
+
 2010-08-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Don't hide the table of contents in the manual.
